--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,49 @@
-Django>=3.0,<3.1
-wagtail>=2.9,<2.10
+Package             Version   
+------------------- ----------
+appdirs             1.4.3     
+asgiref             3.2.10    
+beautifulsoup4      4.8.2     
+CacheControl        0.12.6    
+certifi             2019.11.28
+chardet             3.0.4     
+colorama            0.4.3     
+contextlib2         0.6.0     
+distlib             0.3.0     
+distro              1.4.0     
+Django              3.0.8     
+django-environ      0.4.5     
+django-modelcluster 5.0.2     
+django-taggit       1.3.0     
+django-treebeard    4.3.1     
+djangorestframework 3.11.0    
+draftjs-exporter    2.1.7     
+gunicorn            20.0.4    
+html5lib            1.0.1     
+idna                2.8       
+ipaddr              2.2.0     
+l18n                2018.5    
+lockfile            0.12.2    
+msgpack             0.6.2     
+packaging           20.3      
+pep517              0.8.2     
+Pillow              7.2.0     
+pip                 20.0.2    
+pkg-resources       0.0.0     
+progress            1.5       
+psycopg2-binary     2.8.5     
+pyparsing           2.4.6     
+pytoml              0.1.21    
+pytz                2020.1    
+requests            2.22.0    
+retrying            1.3.3     
+setuptools          44.0.0    
+six                 1.14.0    
+soupsieve           2.0.1     
+sqlparse            0.3.1     
+Unidecode           1.1.1     
+urllib3             1.25.8    
+wagtail             2.9.2     
+webencodings        0.5.1     
+wheel               0.34.2    
+Willow              1.3       
+XlsxWriter          1.2.9     
